[package]
name = "tea-keyvalue-provider"
version = "0.2.1"
authors = ["Kevin Zhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
wascc-codec = "0.6.0"
log = "0.4.8"
env_logger = "0.7.1"
key-vec = "0.2.4"
tea-codec = { path = "../tea-codec"}